--- a/package.yml
+++ b/package.yml
@@ -1,7 +1,7 @@
 package: nextcloud
-version: '1.2.0'
-author: KLXM
-supportpage: https://github.com/klxm/nextcloud
+version: '1.3.0'
+author: FriendsOfREDAXO
+supportpage: hhttps://github.com/FriendsOfREDAXO/nextcloud
 
 requires:
     redaxo: '^5.18.0'
